samples/_failures_safe/1761533583_5a4701_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05d0680d.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_05d0680d.c:184:9: error: expected declaration or statement at end of input
  184 |         }
      |         ^
./samples/SAFE/__tmp_05d0680d.c:184:9: error: expected declaration or statement at end of input
